syntax = "proto2";

option cc_enable_arenas = true;

package c2018.climber;

enum State {
  IDLE = 0;
  APPROACH = 1;
  CLIMB = 2;
  LIFT = 3;
  DONE = 4;
}

message ClimberInput {
  required uint64 timestamp = 1;
  required double current = 2;
  required double position = 3; // encoder position
  required double angle = 4; // angle according to drivetrain base
}

message ClimberOutput {
  required uint64 timestamp = 1;
  required double voltage = 2;
  required bool release_solenoid = 3;
}

message ClimberStatus {
  required uint64 timestamp = 1;
  required State climber_state = 2;
  required double observed_velocity = 3;
  requried double observed_height = 4;
}

message ClimberGoal {
  required uint64 timestamp = 1;
  required bool should_climb = 2;
  required bool should_release = 3;
}